# tm_mcp_project

./: .gitignore  Dockerfile  Dockerfile.jira  Dockerfile.salesforce  docker-compose.yml  pyproject.toml
src/: requirements.txt
src/mcp_common/: pyproject.toml
src/mcp_common/utils/: bedrock_wrapper.py  parse_time_range.py
src/mcp_jira/: Dockerfile  agent_generate_jql.py  agent_generate_jql.py.bck  agent_generate_jql.py.bck3  agent_generate_jql_supervisor.py  helpers.py  main.py  main.py.bck  pyproject.toml
src/mcp_jira/tests/: resolve_project_names_test.py  test.http  test.py
src/mcp_salesforce/: agent_generate_SOQL.py  core_schema.py  helpers.py  main.py  pyproject.toml
src/mcp_salesforce/tests/: fetch_entity_details_test.py  get_field_ids.py  list_stages.py  run_soql.py  salesforce_main_test.py
